...
    <string name="suitableWeatherMessage">The weather is suitable for a cut.</string>
    <string name="expectNotificationMessage">Expect a notification soon.</string>
    <string name="skippedNotificationMessage">Today\'s notification has been skipped.</string>
    <string name="disabledNotificationsMessage">Notifications are disabled.</string>
    <string name="noConnectionAvailableWeatherMessage">The weather can\'t be checked as either a connection doesn\'t exist or doesn\'t match the preference chosen.</string>

    <string name="home">Home</string>
    <string name="cutLog">Cut Log</string>

    <!-- Regular description -->
    <string name="daysSinceLastCut">
    %1$d days since last cut
    </string>
...
    <!-- Settings activity strings -->
    <string name="settingsTitle">Settings</string>
    <string name="generalPreferencesGroupTitle">General Preferences</string>
    <string name="cuttingSeasonPreferencesTitle">Cutting Season Preferences</string>
    <string name="aboutGroupTitle">About</string>

    <string name="cuttingSeasonTitle">Enable/disable cutting season</string>
    <string name="cuttingSeasonDesc">Manual override the default cutting season. Stops all
    notifications and weather checking. Useful for abnormal weather conditions or pausing app functionality</string>
    <string name="cuttingSeasonKey">inSeason</string>

    <string name="notificationsTitle">Notifications</string>
    <string name="notification_summary_on">Notifications will be sent
    </string>
    <string name="notification_summary_off">Notifications will not be sent</string>
    <string name="notificationDesc">Can be used if there\'s abnormal weather or you
    would like to postpone use.</string>
    <string name="notificationPreferenceKey">notificationSwitch</string>

    <string name="desiredCutFrequency">Desired Cut Frequency</string>
    <string name="lowestOptionFrequency">5 days</string>
    <string name="highestOptionFrequency">14 days</string>

    <string name="dataAccessTitle">Data Saver</string>
...
