...
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
...
        android:layout_gravity="bottom"
        app:itemIconTint="@drawable/bottom_nav_colour_selector"
        app:itemTextColor="@drawable/bottom_nav_colour_selector"
        app:menu="@menu/bottom_navigation_file" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCutFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNav"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
...
